--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "ioredis": "^5.4.1",
     "next": "14.2.5",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "redis": "^4.7.0",
+    "uuid": "^10.0.0"
   },
   "devDependencies": {
     "@types/node": "^20.14.14",
