--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
   "dependencies": {
     "ioredis": "^5.4.1",
     "next": "14.2.5",
+    "qrcode.react": "^3.1.0",
     "react": "^18",
     "react-dom": "^18",
+    "react-qr-reader": "^3.0.0-beta-1",
     "redis": "^4.7.0",
     "uuid": "^10.0.0"
   },
